--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,18 +20,27 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up R 4.5.1
-        uses: r-lib/actions/setup-r@6f6e5bc62fba3a704f74e7ad7ef7676c5c6a2590
+      - name: Checkout repo  
+        uses: actions/checkout@v4
+
+
+      - name: setup R
+        uses: r-lib/actions/setup-r@v2
         with:
-          r-version: 4.5.1
+          use-public-rspm: true
+          r-version: renv
+
+      - name: Restore renv packages
+        uses: r-lib/actions/setup-renv@v2
+
       - name: Copy .Renviron for test runner
         run: |
           cp  /home/shiny_species/.Renviron .
         shell: bash
-      - name: Install dependencies
-        run: |
-          options(repos = c(CRAN = "cran.mirror.rafal.ca"))
-          install.packages(c("remotes", "rcmdcheck", "testthat"),lib = "~/R/library")
-          remotes::install_deps(dependencies = TRUE,  upgrade = "never", lib = "~/R/library")
-        shell: Rscript {0}
+
+    #   - name: Install dependencies
+    #     run: |
+    #       options(repos = c(CRAN = "cran.mirror.rafal.ca"))
+    #       install.packages(c("remotes", "rcmdcheck", "testthat"),lib = "~/R/library")
+    #       remotes::install_deps(dependencies = TRUE,  upgrade = "never", lib = "~/R/library")
+    #     shell: Rscript {0}
