--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,11 +24,11 @@ jobs:
         uses: actions/checkout@v4
 
 
-      - name: setup R
-        uses: r-lib/actions/setup-r@v2
-        with:
-          use-public-rspm: true
-          r-version: renv
+    #   - name: setup R
+    #     uses: r-lib/actions/setup-r@v2
+    #     with:
+    #       use-public-rspm: true
+    #       r-version: renv
 
       - name: Restore renv packages
         uses: r-lib/actions/setup-renv@v2
