--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,12 +23,11 @@ jobs:
       - name: Checkout repo  
         uses: actions/checkout@v4
 
-
-    #   - name: setup R
-    #     uses: r-lib/actions/setup-r@v2
-    #     with:
-    #       use-public-rspm: true
-    #       r-version: renv
+      - name: setup R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
+          r-version: renv
 
       - name: Restore renv packages
         uses: r-lib/actions/setup-renv@v2
