skip r-lib action

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,12 +33,12 @@ jobs:
     #         ./configure
     #         make -j8
 
-      - name: Restore renv packages
-        uses: r-lib/actions/setup-renv@v2
+    #   - name: Restore renv packages
+    #     uses: r-lib/actions/setup-renv@v2
 
-      - name: Unset
-        shell: bash
-        run: unset RENV_PATHS_ROOT
+    #   - name: Unset
+    #     shell: bash
+    #     run: unset RENV_PATHS_ROOT
 
       - name: Restore renv in deploy directory
         shell: Rscript {0}
