--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,6 +44,7 @@ jobs:
         shell: Rscript {0}
         run: |
           renv::restore(prompt=FALSE)
+          renv::isolate()
 
       - name: Copy .Renviron for test runner
         shell: bash
